force-app/main/default/objects/BGBK__Item__c/fields/BGBK__Amount__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Amount__c</fullName>
    <formula>BGBK__Price_Per_Unit__c * BGBK__Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>