force-app/main/default/objects/BGBK__Item__c/fields/BGBK__Fee__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Fee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fee</label>
    <referenceTo>MUSW__Fee__c</referenceTo>
    <relationshipLabel>Items</relationshipLabel>
    <relationshipName>Items</relationshipName>
    <type>Lookup</type>
</CustomField>