force-app/main/default/objects/BGBK__Item__c/fields/BGBK__Fund__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Fund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fund</label>
    <referenceTo>BGBK__Fund2__c</referenceTo>
    <relationshipLabel>Items</relationshipLabel>
    <relationshipName>Items</relationshipName>
    <type>Lookup</type>
</CustomField>