force-app/main/default/objects/BGBK__Item__c/fields/BGBK__Price_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Price_Per_Unit__c</fullName>
    <description>Price per unit (rate)</description>
    <label>Price Per Unit</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>