force-app/main/default/objects/BGBK__Item__c/fields/BGBK__Refund__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Refund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Refund</label>
    <referenceTo>BGBK__Refund__c</referenceTo>
    <relationshipLabel>Items</relationshipLabel>
    <relationshipName>Items</relationshipName>
    <type>Lookup</type>
</CustomField>