force-app/main/default/objects/BGBK__Item__c/fields/BGBK__Related_To__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Related_To__c</fullName>
    <description>Item ID:Item API Name (e.g. 00abc123blabla:MUSW__Fee__c)</description>
    <label>Related To</label>
    <length>60</length>
    <type>Text</type>
</CustomField>