force-app/main/default/objects/BGBK__Item__c/fields/BGBK__Transaction__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Transaction__c</fullName>
    <label>Transaction</label>
    <referenceTo>BGBK__Transaction__c</referenceTo>
    <relationshipLabel>Items</relationshipLabel>
    <relationshipName>Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>